compatability with java 8